# apps/backend/src/queens/dto/update-queen.dto.ts
@@ -1,4 +1,0 @@
-import { PartialType } from '@nestjs/swagger';
-import { CreateQueenDto } from './create-queen.dto';
-
-export class UpdateQueenDto extends PartialType(CreateQueenDto) {}
