# packages/shared-schemas/src/queens/status.ts
@@ -1,0 +1,10 @@
+import { z } from 'zod';
+
+export const queenStatusSchema = z.enum([
+  'ACTIVE',
+  'REPLACED',
+  'DEAD',
+  'UNKNOWN',
+]);
+
+export type QueenStatus = z.infer<typeof queenStatusSchema>;
